# robot_design_lab

./: README.md
rdl_commands/: Makefile  terminator.conf
rdl_commands/ws1/: Makefile  terminator.conf
rdl_commands/ws3/: Makefile  commands.txt  run_planning.sh  terminator.conf
rdl_commands/ws4/: commands.txt
rdl_commands/ws5/: commands.txt
rdl_commands/ws6/: commands.txt
rdl_commands/ws7/: commands.txt
rdl_navigation_layers/: CMakeLists.txt  README.md  costmap_rdl_plugin.xml  package.xml
rdl_navigation_layers/include/rdl_navigation_layers/: rdl_obstacles_layer.h
rdl_navigation_layers/src/: rdl_obstacles_layer.cpp
rdl_rgb_obstacle_detection/: CMakeLists.txt  README.md  package.xml
rdl_rgb_obstacle_detection/cfg/: image_processing.cfg
rdl_rgb_obstacle_detection/config/: rviz_rgb_obs.rviz
rdl_rgb_obstacle_detection/launch/: obstacle_detection.launch
rdl_rgb_obstacle_detection/msg/: Goals.msg  Obstacles.msg
rdl_rgb_obstacle_detection/src/: obstacle_detection.py
rdl_rgb_obstacle_detection/src/mockup/: obstacle_localisation_mockup.py
rdl_sim_worlds/: CMakeLists.txt  README.md  package.xml
rdl_sim_worlds/launch/: rdl_sim_worlds_example.launch  simple_competition_world.launch  turtlebot3_world.launch
rdl_sim_worlds/worlds/: empty.world  simple_competition.world  turtlebot3_world.world
rdl_turtlebot3_bringup_sim/: CMakeLists.txt  package.xml
rdl_turtlebot3_bringup_sim/config/: cleaning_robot.rviz  turtlebot3_control.yaml
rdl_turtlebot3_bringup_sim/launch/: robot.launch  turtlebot3_control.launch
rdl_turtlebot3_bringup_sim/launch/multi_robot/: multi_robot.launch  multi_robot_template.launch
rdl_turtlebot3_bringup_sim/scripts/: clean_room_behavior.py
rdl_turtlebot3_description/: CMakeLists.txt  package.xml
rdl_turtlebot3_description/meshes/wheels/fancy_wheel/: odometry_wheel.dae
rdl_turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_joint_ctrl_burger.urdf.xacro  turtlebot3_simplified_burger.gazebo.xacro  turtlebot3_simplified_burger.urdf.xacro
rdl_turtlebot3_description/urdf/includes/: differential_drive_plugin.gazebo.xacro  turtlebot3_burger_model.xacro  turtlebot3_common_burger.gazebo.xacro  turtlebot3_joint_ctrl_burger.gazebo.xacro  turtlebot3_simplified_burger_model.xacro
rdl_turtlebot3_navigation/: CMakeLists.txt  package.xml
rdl_turtlebot3_navigation/config/: distance_between_wheels.rviz  mapping.rviz  multi_robot.rviz  rdl_path_planning.rviz
rdl_turtlebot3_navigation/config/mapping/: mapping_params.yaml
rdl_turtlebot3_navigation/config/move_base/: amcl.yaml  costmap_common_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rdl_turtlebot3_navigation/launch/: base_controller.launch  competition.launch  dwa_local_planner.launch  local_planner.launch  mapping.launch  motion_planning.launch  move_base.launch  odometry.launch
rdl_turtlebot3_navigation/launch/multi_robot/: multi_robot_move_base.launch
rdl_turtlebot3_navigation/maps/turtlebot3_world/: map.pgm  map.yaml
rdl_turtlebot3_navigation/scripts/: base_controller.py  dwa_local_planner.py  goal_handler.py  inverse_range_sensor_model.py  mapping_node.py  odometry.py  path_planning.py
rdl_turtlebot3_navigation/scripts/bash/: call_move_base_srv_make_plan.sh
