<?xml version="1.0"?>
<package>
  <name>rdl_rgb_obstacle_detection</name>
  <version>0.0.1</version>
  <description>
      RGB based obstacle detection using opencv.

      Robot Design Lab - University of Bremen lecture - lab material.
  </description>

  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>GPLv3</license>
  
  <author email="arne.boeckmann@dfki.de">Arne Böckmann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
    
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
