<?xml version="1.0"?>
<package>
    <name>rdl_turtlebot3_navigation</name>
    <version>0.0.1</version>
    <description>
        turtlebot3 navigation: odometry, ...

        Robot Design Lab - University of Bremen lecture - lab material.
    </description>

    <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

    <license>GPLv3</license>
    
    <author email="oscar.lima@dfki.de">Oscar Lima</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>tf</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>

</package>
